[workspace]
resolver = "2"
members = [
  "examples",
  "pint-abi",
  "pint-abi-gen",
  "pint-abi-gen-tests",
  "pint-abi-types",
  "pint-abi-visit",
  "pint-cli",
  "pint-manifest",
  "pint-pkg",
  "pint-solve",
  "pintc",
  "pintfmt",
  "test-util",
  "tests",
]

[workspace.dependencies]
yansi = "1.0"
anyhow = "1.0"
ariadne = "0.4"
chumsky = "0.9"
clap = { version = "4.5", features = ["derive"] }
constraint-asm = { git = "https://github.com/essential-contributions/essential-base.git", branch = "freesig/predicate-exists", package = "essential-constraint-asm" }
essential-check = { git = "https://github.com/essential-contributions/essential-base.git", branch = "freesig/predicate-exists", features = ["tracing"] }
essential-constraint-vm = { git = "https://github.com/essential-contributions/essential-base.git", branch = "freesig/predicate-exists" }
essential-state-read-vm = { git = "https://github.com/essential-contributions/essential-base.git", branch = "freesig/predicate-exists" }
essential-hash = { git = "https://github.com/essential-contributions/essential-base.git", branch = "freesig/predicate-exists" }
essential-types = { git = "https://github.com/essential-contributions/essential-base.git", branch = "freesig/predicate-exists" }
expect-test = "1.4"
fxhash = "0.2"
itertools = "0.13"
logos = "0.14"
petgraph = "0.6"
pint-abi = { path = "pint-abi", version = "0.3.0" }
pint-abi-gen = { path = "pint-abi-gen", version = "0.3.0" }
pint-abi-types = { path = "pint-abi-types", version = "0.3.0" }
pint-abi-visit = { path = "pint-abi-visit", version = "0.3.0" }
pint-manifest = { path = "pint-manifest", version = "0.1.0" }
pint-pkg = { path = "pint-pkg", version = "0.5.0" }
pintc = { path = "pintc", version = "0.5.0" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1.0"
state-asm = { git = "https://github.com/essential-contributions/essential-base.git", branch = "freesig/predicate-exists", package = "essential-state-asm" }
syn = { version = "2.0", features = ["extra-traits", "full", "printing"] }
thiserror = "1.0"
tokio = { version = "1.36", default-features = false, features = ["macros", "test-util"] }
toml = "0.8"
tracing-subscriber = "0.3"
walkdir = "2.5"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/pint"
