[workspace]
resolver = "2"
members = [
  "examples",
  "pint-abi",
  "pint-abi-gen",
  "pint-abi-gen-tests",
  "pint-abi-types",
  "pint-abi-visit",
  "pint-cli",
  "pint-manifest",
  "pint-pkg",
  "pint-solve",
  "pintc",
  "pintfmt",
  "test-util",
  "tests",
]

[workspace.dependencies]
yansi = "1.0"
anyhow = "1.0"
ariadne = "0.5"
chumsky = "0.9"
clap = { version = "4.5", features = ["derive"] }
essential-asm = "0.11"
essential-check = "0.15"
essential-hash = "0.10"
essential-types = "0.8"
essential-vm = "0.13"
expect-test = "1.4"
fxhash = "0.2"
itertools = "0.14"
logos = "0.15"
petgraph = "0.7"
pint-abi = { path = "pint-abi", version = "0.12.0" }
pint-abi-gen = { path = "pint-abi-gen", version = "0.12.0" }
pint-abi-types = { path = "pint-abi-types", version = "0.5.0" }
pint-abi-visit = { path = "pint-abi-visit", version = "0.8.0" }
pint-manifest = { path = "pint-manifest", version = "0.4.0" }
pint-pkg = { path = "pint-pkg", version = "0.14.0" }
pintc = { path = "pintc", version = "0.14.0" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "printing"] }
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["macros", "test-util"] }
toml = "0.8"
tracing-subscriber = "0.3"
walkdir = "2.5"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/pint"
