[package]
name = "examples-runner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
pintc = { path = "../pintc", default-features = false }
regex = "1.10"
serde = "1.0"
serde_json = "1.0"
test-util = { path = "../test-util" }
yansi = { workspace = true }

[[test]]
name = "runner"
path = "runner.rs"
