[package]
name = "examples-runner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
pint-abi = { workspace = true }
pintc = { workspace = true }
regex = "1.10"
serde = { workspace = true }
test-util = { path = "../test-util" }
yansi = { workspace = true }

[build-dependencies]
pint-pkg = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
essential-check = { workspace = true }
essential-hash = { workspace = true }
essential-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "abi_gen_example"
path = "abi_gen_example.rs"

[[test]]
name = "runner"
path = "runner.rs"
