[package]
name = "pint-abi-gen-tests"
version = "0.1.0"
description = "A crate solely for testing the `pint-abi-gen` proc-macro crate."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# The build script for building each of the test pkgs and generating their ABIs.
build = "build.rs"

[build-dependencies]
pint-pkg = { workspace = true }
walkdir = { workspace = true }

[dependencies]
pint-abi = { workspace = true }
pint-abi-gen = { workspace = true }
