[package]
name = "pint-abi-gen"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
abi-types = { workspace = true }
essential-types = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
