[package]
name = "pint-abi-gen"
version = "0.1.0"
description = "proc-macro for generating pint ABI items"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
essential-types = { workspace = true }
pint-abi-types = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
