[package]
name = "pint-abi-gen"
version = "0.10.0"
description = "proc-macro for generating pint ABI items"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
essential-hash = { workspace = true }
essential-types = { workspace = true }
pint-abi-types = { workspace = true }
pint-abi-visit = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
