[package]
name = "pint-abi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-types = { workspace = true }
pint-abi-gen = { workspace = true, optional = true }
pint-abi-types = { workspace = true }

[features]
default = ["pint-abi-gen"]
