[package]
name = "pint-abi"
version = "0.11.0"
description = "Encoding, decoding and other helpers for working with the Pint Essential ABI."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-types = { workspace = true }
pint-abi-gen = { workspace = true, optional = true }
pint-abi-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["pint-abi-gen"]
