[package]
name = "pint-cli"
version = "0.6.0"
description = "Pint's package manager and CLI plugin host."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pint"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
pint-pkg = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
