[package]
name = "pint-manifest"
description = "The Pint manifest implementation, i.e. pint.toml."
version = "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_ignored = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
