[package]
name = "pint-pkg"
description = "The library implementation for Pint package management."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true }
essential-types = { workspace = true }
petgraph = { workspace = true }
pint-abi-types = { workspace = true }
pint-manifest = { workspace = true }
pintc = { path = "../pintc", version = "0.1.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
