[package]
name = "pint-pkg"
description = "The library implementation for Pint package management."
version = "0.8.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
essential-hash = { workspace = true }
essential-types = { workspace = true }
petgraph = { workspace = true }
pint-abi-types = { workspace = true }
pint-manifest = { workspace = true }
pintc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
