[package]
name = "pint-solve"
version = "0.2.0"
description = "Pint solver"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
lalrpop = "0.20"

[package.metadata.cargo-udeps.ignore]
normal = ["thiserror"]

[dependencies]
expect-test = { workspace = true }
fxhash = { workspace = true }
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
russcip = { version = "0.3.0", optional = true }
thiserror = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
test-util = { path = "../test-util" }

[features]
solver-scip = ["russcip"]
