[package]
name = "pint"
version = "0.1.0"
description = "Pint's package manager and CLI plugin host."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
pint-pkg = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
