[package]
name = "pintc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pintc"
path = "src/lib.rs"

[[bin]]
name = "pintc"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.20"

[package.metadata.cargo-udeps.ignore]
normal = ["pint_solve"]

[dependencies]
abi-types = { path = "../abi-types" }
anyhow = { workspace = true }
ariadne = { workspace = true }
clap = { workspace = true }
constraint-asm = { workspace = true }
essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
expect-test = { workspace = true }
fxhash = { workspace = true }
itertools = { workspace = true }
lalrpop-util = "0.20"
logos = { workspace = true }
pint_solve = { path = "../pint-solve", default-features = false }
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
similar-asserts = { version = "1.5", default-features = false }
slotmap = "1.0"
state-asm = { workspace = true }
thiserror = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
tempfile = { version = "3.10.0" }
test-util = { path = "../test-util" }
test_bin = "0.4"

[features]
default = []
solver-scip = ["pint_solve/solver-scip"]
