[package]
name = "pintc"
version = "0.3.0"
description = "Compiler for the Pint language"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pintc"
path = "src/lib.rs"

[[bin]]
name = "pintc"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.20"

[package.metadata.cargo-udeps.ignore]
normal = ["pint-solve"]

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
clap = { workspace = true }
constraint-asm = { workspace = true }
essential-hash = { workspace = true }
essential-types = { workspace = true }
expect-test = { workspace = true }
fxhash = { workspace = true }
itertools = { workspace = true }
lalrpop-util = "0.20"
logos = { workspace = true }
petgraph = "0.6"
pint-abi-types = { workspace = true }
pint-solve = { path = "../pint-solve", version = "0.1.0", default-features = false }
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
similar-asserts = { version = "1.5", default-features = false }
slotmap = "1.0"
state-asm = { workspace = true }
thiserror = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
test-util = { path = "../test-util" }
test_bin = "0.4"

[features]
solver-scip = ["pint-solve/solver-scip"]
experimental-types = []
