[package]
name = "pintfmt"
version = "0.1.0"
description = "Formatter for the Pint programming language"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true }
expect-test = { workspace = true }
itertools = { workspace = true }
logos = { workspace = true }
thiserror = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
regex = "1.10"
tempfile = { version = "3.10.0" }
test_bin = "0.4"
