[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
essential-constraint-vm = { git = "ssh://git@github.com/essential-contributions/essential-base.git", package = "essential-constraint-vm" }
essential-state-read-vm = { git = "ssh://git@github.com/essential-contributions/essential-base.git", package = "essential-state-read-vm" }
essential-types = { workspace = true }
#pint_solve = { path = "../pint-solve", default-features = false }
pintc = { path = "../pintc", default-features = false }
test-util = { path = "../test-util" }
thiserror = "1"
tokio = { workspace = true }
toml = "0.8"
yansi = { workspace = true }

# Disable for now since we can't handle non-scalarized arrays and tuples yet
#[[test]]
#name = "solver_tests"
#path = "solver_tests.rs"

[[test]]
name = "validation_tests"
path = "validation_tests.rs"

[features]
solver-scip = ["pint_solve/solver-scip", "pintc/solver-scip"]
