[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
essential-constraint-vm = { version = "0.1.0", package = "essential-constraint-vm" }
essential-state-read-vm = { version = "0.1.0", package = "essential-state-read-vm" }
essential-types = { workspace = true }
#pint-solve = { path = "../pint-solve", default-features = false }
pintc = { path = "../pintc", default-features = false }
test-util = { path = "../test-util" }
thiserror = "1"
tokio = { workspace = true }
toml = "0.8"
yansi = { workspace = true }

# Disable for now since we can't handle non-scalarized arrays and tuples yet
#[[test]]
#name = "solver_tests"
#path = "solver_tests.rs"

[[test]]
name = "validation_tests"
path = "validation_tests.rs"

#[features]
#solver-scip = ["pint-solve/solver-scip", "pintc/solver-scip"]
