[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
essential-check = { workspace = true }
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-types = { workspace = true }
#pint-solve = { path = "../pint-solve", default-features = false }
pintc = { workspace = true }
serde_json = { workspace = true }
test-util = { path = "../test-util" }
thiserror = "1"
tokio = { workspace = true }
yansi = { workspace = true }

# Disable for now since we can't handle non-scalarized arrays and tuples yet
#[[test]]
#name = "solver_tests"
#path = "solver_tests.rs"

[[test]]
name = "validation_tests"
path = "validation_tests.rs"

#[features]
#solver-scip = ["pint-solve/solver-scip", "pintc/solver-scip"]
