[package]
name = "yurtc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "yurtc"
path = "src/lib.rs"

[[bin]]
name = "yurtc"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.20"

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
clap = { workspace = true }
constraint_asm = { git = "ssh://git@github.com/essential-contributions/intent-server.git" }
essential_types = { git = "ssh://git@github.com/essential-contributions/intent-server.git" }
expect-test = { workspace = true }
itertools = { workspace = true }
lalrpop-util = "0.20"
logos = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.10"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
similar-asserts = { version = "1.5", default-features = false }
slotmap = "1.0"
state_asm = { git = "ssh://git@github.com/essential-contributions/intent-server.git" }
thiserror = { workspace = true }
yansi = { workspace = true }
yurt_solve = { path = "../yurt-solve" }

[dev-dependencies]
intent-server = { git = "ssh://git@github.com/essential-contributions/intent-server.git" }
tempfile = { version = "3.10.0" }
test_bin = "0.4"

[features]
default = ["solver-scip"]
solver-scip = []
