[package]
name = "yurtc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "yurtc"
path = "src/lib.rs"

[[bin]]
name = "yurtc"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.20"

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
clap = { workspace = true }
constraint_asm = { git = "ssh://git@github.com/essential-contributions/intent-server.git" }
essential_types = { git = "ssh://git@github.com/essential-contributions/intent-server.git" }
expect-test = { workspace = true }
itertools = { workspace = true }
lalrpop-util = "0.20"
logos = { workspace = true }
regex = "1.10"
serde_json = "1.0"
similar-asserts = { version = "1.5", default-features = false }
slotmap = "1.0"
state_asm = { git = "ssh://git@github.com/essential-contributions/intent-server.git" }
thiserror = { workspace = true }
yansi = { workspace = true }
yurt_solve = { path = "../yurt-solve", default-features = false }

[dev-dependencies]
tempfile = { version = "3.10.0" }
test-util = { path = "../test-util" }
test_bin = "0.4"

[features]
default = ["solver-scip"]
solver-scip = ["yurt_solve/solver-scip"]
